--- a/Seminar2/index.html
+++ b/Seminar2/index.html
@@ -22,10 +22,10 @@
 
   <hr>
 
-  <img src="" alt="Nice cat" width="600">
+  <img src="https://chudo-prirody.com/uploads/posts/2021-08/1628626852_115-p-foto-kotikov-milikh-122.jpg" alt="Nice cat" width="600">
   <p>Картинка с абсолютной ссылкой</p>
 
-  <img src="" alt="Nice cat" class="size">
+  <img src="./image/cat.jpg" alt="Nice cat" class="size">
   <p class="col">Картинка с относительной ссылкой</p>
 
   <h3>Я умею</h3>
