--- a/Seminar4/cv.html
+++ b/Seminar4/cv.html
@@ -1,3 +1,24 @@
+<?php
+$name = 'Ivanov Ivan';
+$prof = 'designer';
+$country = 'Russian Federation';
+$city = 'Moscow';
+$email = 'email@email.com';
+$tel = '89169121212';
+
+$skills = [
+['name' => 'Adobe', 'percent' => 90],
+['name' => 'Photo', 'percent' => 80],
+['name' => 'Illustrator', 'percent' => 75],
+['name' => 'Media', 'percent' => 50],
+];
+
+for ($i = 0; $i < count($skills); $i++) {
+  echo $skills[$i]['percent'];
+}
+
+?>
+
 <!DOCTYPE html>
 <html>
   <head>
@@ -28,37 +49,28 @@
         <div class="w3-display-container">
           <img src="https://imgfon.ru/Images/Details_img_880px/Animals/glaza-belyy_fon-kotik-morda-polosatyy.webp" style="width:100%" alt="Avatar">
           <div class="w3-display-bottomleft w3-container w3-text-black">
-            <h2>Имя</h2>
+            <h2><?php echo $name ?></h2>
           </div>
         </div>
         <div class="w3-container">
-          <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Профессия</p>
-          <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Город, страна</p>
-          <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>E-mail</p>
-          <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>Телефон</p>
+          <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i><?php echo $prof ?></p>
+          <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i><?php echo $country . ' ' . $city ?></p>
+          <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i><?php echo $email ?></p>
+          <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i><?php echo $tel ?></p>
           <hr>
 
           <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-teal"></i>Навыки</b></p>
-          <p>Adobe Photoshop</p>
-          <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:90%">90%</div>
-          </div>
-          <p>Photography</p>
-          <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:80%">
-              <div class="w3-center w3-text-white">80%</div>
+          <?php 
+            for ($i = 0; $i < count($skills); $i++):
+            $n = $skills[$i]['name'];
+            $p = $skills[$i]['percent'];
+            ?>
+            <p><? = $n; ?></p>
+            <div class="w3-light-grey w3-round-xlarge w3-small">
+              <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:<?php echo $p;?>%"><?php echo $p;?>%</div>
             </div>
-          </div>
-          <p>Illustrator</p>
-          <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:75%">75%</div>
-          </div>
-          <p>Media</p>
-          <div class="w3-light-grey w3-round-xlarge w3-small">
-            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:50%">50%</div>
-          </div>
+          <?php endfor; ?>
           <br>
-
           <p class="w3-large w3-text-theme"><b><i class="fa fa-globe fa-fw w3-margin-right w3-text-teal"></i>Языки</b></p>
           <p>Английский</p>
           <div class="w3-light-grey w3-round-xlarge">
